--- a/assets/css/pessoa/pessoa-imagem.css
+++ b/assets/css/pessoa/pessoa-imagem.css
@@ -3,9 +3,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 100%;
-    height: 300px;
     margin: 0 auto;
-    width: 300px;
+    
 }
 
 .pessoa__imagem--roberta {
@@ -18,4 +17,32 @@
 
 .pessoa__imagem--andreia {
     background-image: url('../../img/pessoas/andreia.jpg');
+}
+
+@media screen and (min-width: 0) {
+    .pessoa__imagem {
+        height: 300px;
+        width: 300px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .pessoa__imagem {
+        height: 180px;
+        width: 180px;
+    }
+}
+
+@media screen and (min-width: 998px) {
+    .pessoa__imagem {
+        height: 250px;
+        width: 250px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .pessoa__imagem {
+        height: 300px;
+        width: 300px;
+    }
 }
