--- a/assets/css/quemSomos/quemSomos.css
+++ b/assets/css/quemSomos/quemSomos.css
@@ -1,4 +1,15 @@
 .quem-somos {
-    padding: 5rem;
     text-align: center;
+}
+
+@media screen and (min-width: 0) {
+    .quem-somos {
+        padding: 1em;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .quem-somos {
+        padding: 5rem;
+    }
 }
